[project]
name = "antom-payment"
version = "0.1.0"
description = "Integrates Ant International's Antom payment APIs, enabling AI assistants to handle payment and refund operations seamlessly."
authors = [
    { name = "Steven", email = "duanmuci@ant-intl.com" },
    { name = "Zunjiao Wang", email = "wangzunjiao.wzj@digital-engine.com" }
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "google-adk>=1.11.0",
    "mcp>=1.13.0",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
# CRITICAL: This tells Ruff that 'antom_payment' is THIS sample's code
known-first-party = ["antom_payment"]

[tool.hatch.build.targets.wheel]
packages = ["antom_payment"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"