[project]
name = "podcast-transcript-agent"
version = "0.1.0"
description = "AI agent for generating and analyzing podcast transcripts using Google ADK."
authors = [
    { name = "Google LLC" }
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.117.1",
    "google-adk>=1.14.1",
    "google-generativeai>=0.8.5",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.4.6",
]

[tool.ruff]
# Point back to the Master template in the root
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
# Categorizes the local package for correct import sorting
known-first-party = ["podcast_transcript_agent"]

[tool.hatch.build.targets.wheel]
# Ensures Hatchling finds the package folder correctly
packages = ["podcast_transcript_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"